--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,8 +36,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   intl: ^0.18.1
-  sqflite: any
+  sqflite: ^2.3.0
   path_provider: any
+  badges: ^3.1.2
+  shared_preferences: ^2.2.1
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
@@ -62,9 +65,17 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+     - img/1.jpeg
+     - img/2.jpeg
+     - img/3.jpeg
+     - img/4.jpeg
+     - img/5.jpeg
+     - img/6.jpeg
+     - img/7.jpeg
+     - img/8.jpeg
+     - img/9.jpeg
+     - img/10.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
